fix: make 2x2 grid responsive
Problem:
    There was an issue before where the 2x2 grid would not be
    responsive and look ugly on other viewport sizes.

Solution:
    Instead of hard coding values for the column and row
    numbers, I used the auto-fit function which made
    the columns and rows resize based on my given minmax
    pixel size and column value.

--- a/styles.css
+++ b/styles.css
@@ -74,18 +74,23 @@ p {
 }
 
 .nav-link {
-    font-family: 'Amatic SC';
-    font-weight: 700;
     font-size: 30px;
-    letter-spacing: 3px;
+}
+
+#header-img {
+
+}
+
+#member-grid-flex-container {
+    display: flex;
+    justify-content: center;
 }
 
 #member-grid {
     display: grid;
-    width: 48.5%;
+    width: 48%;
     height: 100%;
-    grid-template-columns: repeat(2, 2fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 10px;
     padding-top: 10px;
 }
@@ -96,11 +101,7 @@ p {
     height: 50vh;
 }
 
-#member-grid-flex-container {
-    display: flex;
-    justify-content: center;
 }
 
-#kol-logo {
 
 }
